fix scrollbar-y shown

--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ a {
 }
 
 .container {
-    width: 100dvw;
+    width: 100%;
     height: 100dvh;
     display: flex;
     justify-content: center;
